Saved app manifest

--- a/app-manifest.json
+++ b/app-manifest.json
@@ -12,7 +12,12 @@
     "exportInsightsData": false,
     "includedDatasetsData": [],
     "includedSavedModels": [],
-    "includedManagedFolders": [],
+    "includedManagedFolders": [
+      {
+        "id": "6idYHLQ9",
+        "name": "retrained_model"
+      }
+    ],
     "includedModelEvaluationStores": [],
     "exportGitRepository": false
   },
@@ -23,7 +28,66 @@
     "showVersionControlFeatures": false
   },
   "useAppHomepage": true,
-  "homepageSections": [],
+  "homepageSections": [
+    {
+      "tiles": [
+        {
+          "behavior": "MODAL",
+          "params": [
+            {
+              "name": "variable1",
+              "type": "STRING",
+              "label": "nice label in the form",
+              "description": "Help text for the variable",
+              "mandatory": false,
+              "canSelectForeign": false,
+              "markCreatedAsBuilt": false,
+              "allowDuplicates": true,
+              "getChoicesFromPython": false,
+              "canCreateDataset": false
+            },
+            {
+              "name": "variable2",
+              "type": "INT",
+              "label": "another label",
+              "mandatory": false,
+              "canSelectForeign": false,
+              "markCreatedAsBuilt": false,
+              "allowDuplicates": true,
+              "getChoicesFromPython": false,
+              "canCreateDataset": false
+            },
+            {
+              "name": "variable3",
+              "type": "SELECT",
+              "label": "some selector",
+              "mandatory": false,
+              "canSelectForeign": false,
+              "markCreatedAsBuilt": false,
+              "allowDuplicates": true,
+              "selectChoices": [
+                {
+                  "value": "val1",
+                  "label": "First",
+                  "showInColumnPreview": false,
+                  "selected": false
+                },
+                {
+                  "value": "val2",
+                  "label": "Second",
+                  "showInColumnPreview": false,
+                  "selected": false
+                }
+              ],
+              "getChoicesFromPython": false,
+              "canCreateDataset": false
+            }
+          ],
+          "type": "PROJECT_VARIABLES_EDIT"
+        }
+      ]
+    }
+  ],
   "label": "We Bare Bares",
   "shortDesc": "The template *We Bare Bares* was created by Administrator on Feb 01st 2022",
   "tags": [],
