Saved app manifest

--- a/app-manifest.json
+++ b/app-manifest.json
@@ -48,6 +48,10 @@
             }
           ],
           "type": "PROJECT_VARIABLES_EDIT"
+        },
+        {
+          "scenarioId": "predict-image",
+          "type": "SCENARIO_RUN"
         }
       ]
     }
